// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`class Subgraph root is Digraph addXxx existXxx removeXxx APIs Edge operation methods works 1`] = `
"subgraph \\"test\\" {
  \\"node1\\";
  \\"node2\\";
  \\"node1\\" -- \\"node2\\";
}"
`;

exports[`class Subgraph root is Digraph addXxx existXxx removeXxx APIs Subgraph operation methods works 1`] = `
"subgraph \\"test\\" {
  subgraph \\"sub\\" {
  }
}"
`;

exports[`class Subgraph root is Digraph label attribute behavior html like 1`] = `
"subgraph \\"test\\" {
  graph [
    label = <<B>this is test for graph label</B>>,
  ];
  edge [
    label = <<U>this is test for edge label</U>>,
  ];
  node [
    label = <<I>this is test for node label</I>>,
  ];
}"
`;

exports[`class Subgraph root is Digraph label attribute behavior plain text label to be quoted by double quotation 1`] = `
"subgraph \\"test\\" {
  graph [
    label = \\"this is test for graph label\\",
  ];
  edge [
    label = \\"this is test for edge label\\",
  ];
  node [
    label = \\"this is test for node label\\",
  ];
}"
`;

exports[`class Subgraph root is Digraph set attributes 1`] = `
"digraph {
  subgraph \\"test\\" {
    rank = \\"same\\";
  }
}"
`;

exports[`class Subgraph root is Digraph set attributes by apply 1`] = `
"digraph {
  subgraph \\"test\\" {
    rank = \\"same\\";
  }
}"
`;

exports[`class Subgraph root is Digraph subgraph with comment multi line comment 1`] = `
"// this is comment.
// second line.
subgraph \\"test\\" {
}"
`;

exports[`class Subgraph root is Digraph subgraph with comment single line comment 1`] = `
"// this is comment.
subgraph \\"test\\" {
}"
`;

exports[`class Subgraph root is Graph addXxx existXxx removeXxx APIs Edge operation methods works 1`] = `
"subgraph \\"test\\" {
  \\"node1\\";
  \\"node2\\";
  \\"node1\\" -- \\"node2\\";
}"
`;

exports[`class Subgraph root is Graph addXxx existXxx removeXxx APIs Subgraph operation methods works 1`] = `
"subgraph \\"test\\" {
  subgraph \\"sub\\" {
  }
}"
`;

exports[`class Subgraph root is Graph label attribute behavior html like 1`] = `
"subgraph \\"test\\" {
  graph [
    label = <<B>this is test for graph label</B>>,
  ];
  edge [
    label = <<U>this is test for edge label</U>>,
  ];
  node [
    label = <<I>this is test for node label</I>>,
  ];
}"
`;

exports[`class Subgraph root is Graph label attribute behavior plain text label to be quoted by double quotation 1`] = `
"subgraph \\"test\\" {
  graph [
    label = \\"this is test for graph label\\",
  ];
  edge [
    label = \\"this is test for edge label\\",
  ];
  node [
    label = \\"this is test for node label\\",
  ];
}"
`;

exports[`class Subgraph root is Graph set attributes 1`] = `
"graph {
  subgraph \\"test\\" {
    rank = \\"same\\";
  }
}"
`;

exports[`class Subgraph root is Graph set attributes by apply 1`] = `
"graph {
  subgraph \\"test\\" {
    rank = \\"same\\";
  }
}"
`;

exports[`class Subgraph root is Graph subgraph with comment multi line comment 1`] = `
"// this is comment.
// second line.
subgraph \\"test\\" {
}"
`;

exports[`class Subgraph root is Graph subgraph with comment single line comment 1`] = `
"// this is comment.
subgraph \\"test\\" {
}"
`;
